--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
           <img src="img/money.png" alt="logo" class="logo-icon" />
           <h2>Family<span>budget</span></h2>
         </div>
-        <h1 class="title">Расчет дневного бюджета</h1>
+        <h1 class="title">Семейный бюджет - онлайн</h1>
       </div>
     </header>
 
