--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
     <!-- MAIN -->
 
     <main class="main">
+
       <!-- DATA -->
 
       <section class="data">
@@ -34,14 +35,103 @@
         <!-- INCOME -->
 
         <div class="regular-income">Постоянные доходы</div>
-        <input class="income-item" type="text" id="income_1" placeholder="Заработная плата" />
-        <input class="income-item" type="text" id="income_2" placeholder="Бизнес" />
+        <input
+          class="income-item"
+          type="text"
+          id="income_1"
+          placeholder="Заработная плата"
+        />
+        <input
+          class="income-item"
+          type="text"
+          id="income_2"
+          placeholder="Бизнес"
+        />
 
         <div class="choose-income-label">Возможный доход</div>
-        <input class="choose-income" type="text" id="income" placeholder="Возможный доход"/>
+        <input
+          class="choose-income"
+          type="text"
+          id="income"
+          placeholder="Возможный доход"
+        />
+
+        <!-- EXPENSES -->
+
+        <div class="choose-expenses">Обязательные расходы</div>
+        <input
+          class="expenses-item"
+          type="text"
+          id="expenses_2"
+          placeholder="Оплата ЖКУ"
+        />
+        <input
+          class="expenses-item"
+          type="text"
+          id="expenses_4"
+          placeholder="Питание"
+        />
+        <input
+          class="expenses-item"
+          type="text"
+          id="expenses_6"
+          placeholder="Кредиты"
+        />
+        <input
+          class="expenses-item"
+          type="text"
+          id="expenses_8"
+          placeholder="Медицина"
+        />
+        <input
+          class="expenses-item"
+          type="text"
+          id="expenses_10"
+          placeholder="Одежда"
+        />
+        <input
+          class="expenses-item"
+          type="text"
+          id="expenses_12"
+          placeholder="Путешествия"
+        />
+        <input
+          class="expenses-item"
+          type="text"
+          id="expenses_14"
+          placeholder="Образование"
+        />
+        <input
+          class="expenses-item"
+          type="text"
+          id="expenses_14"
+          placeholder="Связь"
+        />
+
+        <div class="optionalexpenses">Дополнительные расходы</div>
+        <input
+          class="optionalexpenses-item"
+          type="text"
+          id="optionalexpenses_1"
+          placeholder="Расходы 1"
+        />
+        <input
+          class="optionalexpenses-item"
+          type="text"
+          id="optionalexpenses_2"
+          placeholder="Расходы 2"
+        />
+        <input
+          class="optionalexpenses-item"
+          type="text"
+          id="optionalexpenses_3"
+          placeholder="Расходы 3"
+        />
+
+        <!-- SAVINGS -->
 
         <div class="checksavings">
-          Есть ли накопления:
+          Есть ли вклады?
           <input id="savings" type="checkbox" />
         </div>
         <label for="sum">Сумма</label>
@@ -49,31 +139,12 @@
         <label for="percent">Процент</label>
         <input class="choose-percent" id="percent" type="text" />
 
-        <!-- EXPENSES -->
-
-        <div class="choose-expenses">Обязательные расходы</div>
-        <!-- <input class="expenses-item" type="text" id="expenses_1" placeholder="Наименование" /> -->
-        <input class="expenses-item" type="text" id="expenses_2" placeholder="Оплата ЖКУ" />
-        <!-- <input class="expenses-item" type="text" id="expenses_3" placeholder="Наименование" /> -->
-        <input class="expenses-item" type="text" id="expenses_4" placeholder="Питание" />
-        <input class="expenses-item" type="text" id="expenses_6" placeholder="Кредиты" />
-        <input class="expenses-item" type="text" id="expenses_8" placeholder="Медицина" />
-        <input class="expenses-item" type="text" id="expenses_10" placeholder="Одежда" />
-        <input class="expenses-item" type="text" id="expenses_12" placeholder="Путешествия" />
-        <input class="expenses-item" type="text" id="expenses_14" placeholder="Образование" />
-        <input class="expenses-item" type="text" id="expenses_14" placeholder="Связь" />
-
-        <div class="optionalexpenses">Дополнительные расходы</div>
-        <input class="optionalexpenses-item" type="text" id="optionalexpenses_1" placeholder="Расходы 1" />
-        <input class="optionalexpenses-item" type="text" id="optionalexpenses_2" placeholder="Расходы 2" />
-        <input class="optionalexpenses-item" type="text" id="optionalexpenses_3" placeholder="Расходы 3" />
-  
         <!-- START -->
 
         <div class="open">
           <button class="start" id="start">Начать расчет</button>
         </div>
-
+        
       </section>
 
       <!-- RESULT -->
@@ -83,28 +154,27 @@
           <div class="budget">Доход:</div>
           <div class="budget-value"></div>
 
+          <div class="expenses">Обязательные расходы:</div>
+          <div class="expenses-value"></div>
+
           <div class="daybudget">Бюджет на 1 день:</div>
           <div class="daybudget-value"></div>
 
           <div class="level">Уровень дохода:</div>
           <div class="level-value"></div>
 
-          <div class="expenses">Обязательные расходы:</div>
-          <div class="expenses-value"></div>
-
-          <div class="optionalexpenses">Возможные траты:</div>
-          <div class="optionalexpenses-value"></div>
-
           <div class="income">Дополнительный доход:</div>
           <div class="income-value"></div>
 
-          <div class="monthsavings">Накопления за 1 месяц:</div>
+          <div class="optionalexpenses">Возможные расходы:</div>
+          <div class="optionalexpenses-value"></div>
+
+          <div class="monthsavings">Доход по вкладам за месяц:</div>
           <div class="monthsavings-value"></div>
 
-          <div class="yearsavings">Накопления за 1 год:</div>
+          <div class="yearsavings">Доход по вкладам за год:</div>
           <div class="yearsavings-value"></div>
         </div>
-
       </section>
 
     </main>
