--- a/index.html
+++ b/index.html
@@ -5,8 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Family budget</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css?family=Ubuntu:300,400,500,700&amp;subset=cyrillic"
+      href="https://fonts.googleapis.com/css2?family=Oswald:wght@300;400;500;700&display=swap"
       rel="stylesheet"
     />
     <link rel="stylesheet" href="css/style.css" />
@@ -27,11 +29,9 @@
     <!-- MAIN -->
 
     <main class="main">
-
       <!-- DATA -->
 
       <section class="data">
-
         <!-- INCOME -->
 
         <div class="regular-income">Постоянные доходы</div>
@@ -144,7 +144,6 @@
         <div class="open">
           <button class="start" id="start">Начать расчет</button>
         </div>
-        
       </section>
 
       <!-- RESULT -->
@@ -176,10 +175,8 @@
           <div class="yearsavings-value"></div>
         </div>
       </section>
-
     </main>
 
     <script src="js/main.js"></script>
-
   </body>
 </html>
